|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-03-31 Benedikt Heintel
	- RELEASE: VHCS ω Omega 1.0.0 RC1

VHCS 2.4.8 ω Omega Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2007-03-30 Benedikt Heintel
	- GUI:
		* fixed: error pages
		* fixed: admin settings layout

2007-03-27 Benedikt Heintel
	- ENGINE:
		* fixed bug #125: wrong permissions

2007-03-26 Benedikt Heintel
	- ENGINE:
		* restructured: vhcs2.conf
		* changed: logical structure for MYSQL_PREFIX (YES = prefix; no = no prefix)
	- GUI:
		* deleted: images for old error pages: not longer supported
	- SETUP:
		* changed: Uninstaller

2007-03-25 Benedikt Heintel
	- ENGINE:
		* fixed bug #125: edited a lot of permissions
		* fixed bug #131: sub/alias domains have no images folder for default page
		* fixed bug #134: empty .sql file on sql backup error (Thanks to Dominik Habbel)
		* fixed bug #136: strings escaped on sql backup (Thanks to Dominik Habbel)
	- GUI:
		* fixed bug #126: cannot add protected groups and users (Thanks to Jan Porath)
		* changed: security improvements & fixes (Thanks to Jan Porath)
	- TOOLS:
		filemanage: deleted unuses folders

2007-03-21 Benedikt Heintel
	- ENGINE:
		* fixed bug #124: missing folder './errordocs/images'
		* fixed bug #125: missing folder in new alias and subdomains
	- GUI:
		* changed: system login templates
		* fixed bug #127: added autoresponder logo

2007-03-21 Benedikt Heintel
	- DISTS:
		* RedHat: added config files
		* OpenBSD: fixed bug #119: wrong filename of the BSDMakefile
	- ENGINE:
		* fixed bug #120: missing '$'

2007-03-18 Benedikt Heintel
	- GUI:
		* serveral fixes with permissions
		* fixed: problems with domain default page