@@ -3,7 +3,7 @@ export
 install:
 
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_CONF)/awstats
-	cp -R ./ $(SYSTEM_CONF)/awstats/awstats.vhcs_tpl.conf
+	cp -R ./awstats.vhcs_tpl.conf $(SYSTEM_CONF)/awstats
 
 uninstall:
 
