@@ -30,6 +30,8 @@ MR_LOCK_FILE = /tmp/vhcs2.lock
 
 CMD_AWK = /usr/bin/awk
 
+CMD_BZIP = /bin/bzip2
+
 CMD_CHOWN = /bin/chown
 
 CMD_CAT = /bin/cat
