@@ -464,19 +464,19 @@ sub uninstall_httpd {
 
     sys_command_rs("a2dissite vhcs2.conf &> /tmp/vhcs2-uninstall-services.log");
 
-    $rs = del_file($main::cfg{'APACHE_SITES_DIR'}/vhcs2.conf);
+    $rs = del_file("$main::cfg{'APACHE_SITES_DIR'}/vhcs2.conf");
 
     return $rs if ($rs != 0);
 
     sys_command_rs("a2dissite master.conf &> /tmp/vhcs2-uninstall-services.log");
 
-    $rs = del_file($main::cfg{'APACHE_SITES_DIR'}/master.conf);
+    $rs = del_file("$main::cfg{'APACHE_SITES_DIR'}/master.conf");
 
     return $rs if ($rs != 0);
 
     sys_command_rs("a2dismod fastcgi &> /tmp/vhcs2-uninstall-services.log");
 
-    $rs = del_file($main::cfg{'APACHE_MODS_DIR'}/fastcgi.conf);
+    $rs = del_file("$main::cfg{'APACHE_MODS_DIR'}/fastcgi.conf");
 
     return $rs if ($rs != 0);
 
